--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portafolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="includes/Style.css">
-    <link rel="icon" href="imagenes/logos/bar2.png">
+    <link rel="icon" href="includes/iconos/mano.png">
     <meta name="keywords" content="informacion, portafolio, trabajo">
     <meta name="description" content="Portafolio para busqueda laboral">
     <meta name="author" content="Sanjurjo Alan">
@@ -76,7 +76,7 @@
             </svg></a></p>
             
         </div>
-        <div id="carouselExampleCaptions" class="carousel slide m-auto p-1" data-bs-ride="false">
+        <div id="carouselExampleCaptions" class="carousel slide m-auto p-1 " data-bs-ride="carousel">
             <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -130,11 +130,11 @@
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span class="visually-hidden">Anterior</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+            <span class="visually-hidden">Siguiente</span>
             </button>
         </div>
 
@@ -143,69 +143,34 @@
                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
             </svg></a></p>
         </div>
-        <div id="carouselExampleCaptions" class="carousel slide m-auto p-1" data-bs-ride="false">
-            <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>          
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
-
-            </div>
+ 
+        <div id="carouselExampleControls" class="carousel slide m-auto p-1" data-bs-ride="carousel">
             <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="includes/imagenes/inicio.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
-                <h5 class="text-info">Web de un Bar</h5>
-                <p>Listado de productos con MySQL pudiendo ver la description de cada uno.</p>
-                </div>
+              <div class="carousel-item active">
+                <img src="includes/imagenes/cajero/Inicio.png" class="d-block w-100" title="Inicio Sesion" alt="Inicio Sesion">
+              </div>
+              <div class="carousel-item">
+                <img src="includes/imagenes/cajero/Registro.png" class="d-block w-100" title="Registrarse" alt="Registrarse">
+              </div>
+              <div class="carousel-item">
+                <img src="includes/imagenes/cajero/Sesion.png" class="d-block w-100" title="Sesion iniciada" alt="Sesion iniciada">
+              </div>
+              <div class="carousel-item">
+                <img src="includes/imagenes/cajero/Transferencia.png" class="d-block w-100" title="Transferencia dinero" alt="Transferencia dinero">
+              </div>
+              <div class="carousel-item">
+                <img src="includes/imagenes/cajero/Cuenta2.png" class="d-block w-100" title="Sesion iniciada 2" alt="Sesion iniciada 2">
+              </div>
             </div>
-            <div class="carousel-item">
-                <img src="includes/imagenes/inicio2.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
-                <h5 class="text-info">Paginacion</h5>
-                <p>Web dinamica.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="includes/imagenes/registro.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
-                <h5 class="text-info">Registrarse para Clientes</h5>
-                <p>Se registran en una base de datos.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="includes/imagenes/inicioSesion.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
-                <h5 class="text-info">Iniciar sesion como Cliente o Admin</h5>
-                <p>Se comprueba si existen en la base de datos, puede guarda informacion con cookies.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="includes/imagenes/sesionCliente.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
-                <h5 class="text-info">Sesion de Cliente</h5>
-                <p>Puede comprar productos.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="includes/imagenes/crudAdmin.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
-                <h5 class="text-info">Sesion de Administrador</h5>
-                <p>Tiene un acceso a informacion de clientes, puede agregar, borrar y actualizar productos a la base de datos.</p>
-                </div>
-            </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon-dark" aria-hidden="true"></span>
+              <span class="visually-hidden">Anterior</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon-dark" aria-hidden="true"></span>
+              <span class="visually-hidden">Siguiente</span>
             </button>
-        </div>
+        </div> 
 
         <div id="conocimientos" class="container">
             <p class="fs-2 my-2 p-0 border-bottom border-secondary text-dark">Conocimientos</p>
