--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -15,8 +18,8 @@
 <body class="bg-secondary bg-opacity-25">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
-    <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light bg-opacity-25 border-bottom border-secondary">
+    <header id="cabecera" class="container">
+        <nav class="navbar navbar-expand-lg bg-light bg-opacity-75 border-bottom border-secondary">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto">
                   <li class="nav-item">
-                    <a class="nav-link active fs-3" aria-current="page" href="#presentacion">Presentacion</a>
+                    <a class="nav-link active fs-3" aria-current="page" href="#saludo">Presentacion</a>
                   </li>
 
                   <li class="nav-item dropdown">
@@ -50,7 +53,7 @@
     </header>
 
     <section>
-        <div class="container my-2">
+        <div id="saludo" class="container my-2">
             <div id="presentacion" class="bg-success bg-opacity-25 m-auto p-4">
                 <h1>
                     👋 Hola, Soy Alan Sanjurjo.
@@ -163,11 +166,11 @@
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon-dark" aria-hidden="true"></span>
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Anterior</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon-dark" aria-hidden="true"></span>
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Siguiente</span>
             </button>
         </div> 
@@ -220,8 +223,7 @@
             <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Alan Sanjurjo</span>
           </div>
         </footer>
-      </div>
-
+    </div>
 
 </body>
 </html>
