--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </p>
                 <p>
                     Estoy en <a href="https://github.com/Alan934" target="_blank">GitHub</a>.
-                    <a class="btn btn-primary m-1" href="includes/descargas/Sanjurjo Alan-CV.pdf" target="_blank" download="Acme Documentation (ver. 2.0.1).txt">Descargar CV</a>
+                    <a class="btn btn-primary m-1" href="includes/descargas/Sanjurjo Alan-CV.pdf" target="_blank" download="Sanjurjo Alan-CV">Descargar CV</a>
                 </p>
             </div>
         </div>
