--- a/index.html
+++ b/index.html
@@ -91,40 +91,40 @@
             </div>
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img loading="lazy" src="includes/imagenes/inicio.png" class="d-block w-100" alt="Listado Productos">
+                <img src="includes/imagenes/inicio.png" class="d-block w-100" alt="Listado Productos">
                 <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
                 <p>Listado de productos con MySQL pudiendo ver la description de cada uno.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img loading="lazy" src="includes/imagenes/inicio2.png" class="d-block w-100" alt="Listado Productos">
+                <img src="includes/imagenes/inicio2.png" class="d-block w-100" alt="Listado Productos">
                 <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
                 <h5>Web dinamica</h5>
                 </div>
             </div>
             <div class="carousel-item">
-                <img loading="lazy" src="includes/imagenes/registro.png" class="d-block w-100" alt="Form Registro">
+                <img src="includes/imagenes/registro.png" class="d-block w-100" alt="Form Registro">
                 <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
                 <h5 class="text-info">Registrarse para Clientes</h5>
                 <p>Se registran en una base de datos.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img loading="lazy" src="includes/imagenes/inicioSesion.png" class="d-block w-100" alt="Form Inicio Sesion">
+                <img src="includes/imagenes/inicioSesion.png" class="d-block w-100" alt="Form Inicio Sesion">
                 <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
                 <h5 class="text-info">Iniciar sesion como Cliente o Admin</h5>
                 <p>Se comprueba si existen en la base de datos, puede guarda informacion con cookies.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img loading="lazy" src="includes/imagenes/sesionCliente.png" class="d-block w-100" alt="Sesion Cliente">
+                <img src="includes/imagenes/sesionCliente.png" class="d-block w-100" alt="Sesion Cliente">
                 <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
                 <h5 class="text-info">Sesion de Cliente</h5>
                 <p>Puede comprar productos.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img loading="lazy" src="includes/imagenes/crudAdmin.png" class="d-block w-100" alt="Sesion Admin">
+                <img src="includes/imagenes/crudAdmin.png" class="d-block w-100" alt="Sesion Admin">
                 <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
                 <h5 class="text-info">Sesion de Administrador</h5>
                 <p>Tiene un acceso a informacion de clientes, puede agregar, borrar y actualizar productos a la base de datos.</p>
@@ -150,19 +150,19 @@
         <div id="carouselExampleControls" class="carousel slide m-auto p-1" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img loading="lazy" src="includes/imagenes/cajero/Inicio.png" class="d-block w-100" title="Inicio Sesion" alt="Inicio Sesion">
+                <img src="includes/imagenes/cajero/Inicio.png" class="d-block w-100" title="Inicio Sesion" alt="Inicio Sesion">
               </div>
               <div class="carousel-item">
-                <img loading="lazy" src="includes/imagenes/cajero/Registro.png" class="d-block w-100" title="Registrarse" alt="Registrarse">
+                <img src="includes/imagenes/cajero/Registro.png" class="d-block w-100" title="Registrarse" alt="Registrarse">
               </div>
               <div class="carousel-item">
-                <img loading="lazy" src="includes/imagenes/cajero/Sesion.png" class="d-block w-100" title="Sesion iniciada" alt="Sesion iniciada">
+                <img src="includes/imagenes/cajero/Sesion.png" class="d-block w-100" title="Sesion iniciada" alt="Sesion iniciada">
               </div>
               <div class="carousel-item">
-                <img loading="lazy" src="includes/imagenes/cajero/Transferencia.png" class="d-block w-100" title="Transferencia dinero" alt="Transferencia dinero">
+                <img src="includes/imagenes/cajero/Transferencia.png" class="d-block w-100" title="Transferencia dinero" alt="Transferencia dinero">
               </div>
               <div class="carousel-item">
-                <img loading="lazy" src="includes/imagenes/cajero/Cuenta2.png" class="d-block w-100" title="Sesion iniciada 2" alt="Sesion iniciada 2">
+                <img src="includes/imagenes/cajero/Cuenta2.png" class="d-block w-100" title="Sesion iniciada 2" alt="Sesion iniciada 2">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
